--- a/Client/package.json
+++ b/Client/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-typical": "^0.1.3",
+    "socket.io-client": "^4.8.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
