--- a/Server/package.json
+++ b/Server/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.8.1",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "socket.io": "^4.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
