--- a/Client/package.json
+++ b/Client/package.json
@@ -25,7 +25,8 @@
     "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
     "html-react-parser": "^5.1.18",
-    "lucide-react": "^0.437.0",
+    "html-to-image": "^1.11.11",
+    "lucide-react": "^0.456.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
@@ -35,6 +36,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-typical": "^0.1.3",
+    "recharts": "^2.13.3",
     "socket.io-client": "^4.8.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
